registry/distribution/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: distribution
  namespace: distribution
spec:
  parentRefs:
    - name: distribution-gateway
  hostnames:
    - distribution.ndomi.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: distribution
          port: 5000
